style.css
body {
	display: grid;
	grid-template-areas: 
	"header header header"
	"nav content side"
	"footer footer footer";
	grid-template-columns: 8% auto 20%;
	grid-template-rows: auto auto auto;
	height: 100vh;
	/*background-image: url('./images/novaBackground.jpeg');*/
	margin: 0;
	padding: 0;
}

header {
	grid-area: header;
	font-family: 'Teko', sans-serif;
	font-size: 3.2em;
	background-color: white;
	margin-top: 0;
	text-align: center;
	background-color: white;
/*	display: flex;
	justify-content: space-around;
*/}

#topPic {
	background-image: url('./images/nova2016.jpg');
	width: 100%;
	margin-top: 0;
	padding: 0;
	height: 70vh;
	background-size: cover;
	background-position: center;
}

#title {
	padding: .6em;
	background-color: rgb(167, 215, 250)
}

.headerPic {
	background-image: url('./images/novaBall.jpg');
	width: 20vh;
	height: 20vh;
	background-size: cover;
	background-position: center center;
}

nav {
	grid-area: nav;
	display: grid;
	/*border: solid;*/
}

#HOME {
	background-image: url('./images/frPeter2.jpg');
	background-size: cover;
	background-position: center center;
}

#peterMessage {
	margin-right: 40%;
	margin-top: 3%;
	height: 30%
}

#quest2 {
	font-size: .85em;
}

#quest3, #quest5, #quest7, #quest9 {
	font-size: .95em;
}

#quest6 {
	font-size: 1.1em;
}

#quest8 {
	font-size: 1.2em;
}


.size {
	font-size: 1.2em;
	padding: 0;
	outline: none;
	border: none;
	background-color: rgb(96, 96, 96);
	color: white;
}

.size:hover {
	background-color: rgb(204, 158, 91);
}

.change {
	
}

.change:hover {
	cursor: pointer;
	transform: scale(1.1);
}

main {
	grid-area: content;
	/*border: solid;*/
	height: 700px;
	display: block;
	align-items: center;
/*	background-image: url('./images/novaBackground.jpeg');
	background-size: cover;*/
}

aside {
	grid-area: side;
	/*border: solid;*/
	background-color: rgb(96, 96, 96);
	padding: 2em;
	text-align: center;
}

a {
	color: black;
	text-decoration: none;
}

.ads {
}

.ads:hover {
	cursor: pointer;
	transform: scale(1.1);
	background-color: white;
}

footer {
	grid-area: footer;
/*	border: solid;*/
	text-align: center;
	background-color: rgb(167, 215, 250)
}

.questionDiv {
	height: 50%;
	widows: 100%;
	position: absolute;
	opacity: 0;
	text-align: center;
	margin: 3.5em;
	background-image: url('./images/novaBackground.jpeg');
	display: flex;
	justify-content: space-around;
	width: 53%;
	padding: 5%;
	padding-top: 8em;
	border-radius: 150px;
	border: solid;
	border-color: rgb(204, 158, 91)
}

.qSpan {
	background-color: white;
	height: 35vh;
	width: 50%;
	border: solid;
	border-color: rgb(204, 158, 91);
	box-shadow: 10px 10px;
	padding: 3%;
	margin-left: 1%;
	margin-right: 10%;
	font-size: 1.4em;
	border-radius: 20px;
	font-family: 'Merriweather', serif;
}

.active {
	z-index: 1;
	position: absolute;
	opacity: 1;
}

.option {
	padding: .2em;
	border-radius: 10px;
}

.option:hover {
	transform: scale(1.1);
	cursor: pointer;
	background-color: rgb(204, 158, 91);
}

.chosen {
	border: solid;
	border-width: .2em;
	border-color: rgb(204, 158, 91);
}

.hidden{
	opacity: 0;
}
.winMessage{
	/*opacity: 1;*/
	text-align: center;
	background-color: white;
	height: 100px;
	font-size: 25px;
	border: solid;
	width: 30%;
	margin: auto;
	margin-top: 0;
	margin-bottom: 1em;
	padding: 2%;
	border-radius: 10px;
	box-shadow: 10px 10px;
}

.image {
	background-size: cover;
	background-position: center center;
	margin: 0;
	border: solid;
	border-color: rgb(204, 158, 91);
	height: 22em;
	width: 24em;
	border-radius: 20px;
	box-shadow: 10px 10px;
	margin-right: 7%;
	margin-top: -2%;
}
#image1{
	background-image: url('./images/jayWrightPup.jpg');
	background-size: cover;
	background-position: center center;
	margin: 0;
	border: solid;
	border-color: rgb(204, 158, 91);
	height: 20em;
	width: 20em;
	border-radius: 20px;
	box-shadow: 10px 10px;

}

#image2 {
	background-image: url("./images/firstChamp.jpeg");
}

#image3 {
	background-image: url("./images/nbaDraft.jpg");
}

#image4 {
	background-image: url("./images/yeezianity.jpg");
}

#image5 {
	background-image: url('./images/donteYoung.jpeg');
	background-position: top;
}

#image6 {
	background-image: url(./images/delaWhere.jpg);
}

#image7 {
	background-image: url(./images/archJenk.gif);
}

#image8 {
	background-image: url('./images/steveMadden.gif');
	width: 35em;
	height: 20em;
}

#image9 {
	background-image: url('./images/dontePhil.jpg');
	width: 70%;
	height: 70%;
	margin-right: .5%;
	margin-top: 2em;
}

#image10 {
	background-image: url('./images/jellyJQ.png');
}


.question {
	padding-bottom: .5em;
	font-size: 1.2em;
}

#SUBMIT {
	display: flex;
	flex-direction: column;
}

.reload{
	height: 10%;
	width: 15%;
	font-size: 1.2em;
	border-radius: 10px;
	margin-top: 10em;
	margin-left: 2em;
}

#answerModal {
	width: 5em;
	height: 58%;
	background-color: pink;
	widows: 100%;
	position: absolute;
	text-align: center;
	margin: 3em;
	background-image: url('./images/novaBackground.jpeg');
	display: flex;
	justify-content: space-around;
	width: 55%;
	padding: 4%;

}

#answerModalAnswers {
	background-color: white;
	border-radius: 10px;
	font-size: 1.2em;
	box-shadow: 10px 10px;
	line-height: 2em;
	padding-left: 1em;
	padding-right: 1em;
}

#checkAnswers {
	padding: 1em;
	margin: 1em;
	font-size: 2em;
	border-radius: 10px;
	margin-top: 4em;
}

#checkAnswers:hover {
	transform: scale(1.1);
	cursor: pointer;
}

.endOptions {
	margin-top: 0;
	margin-bottom: 15em;
	padding: 0;
	font-size: 20px;
}

#seeAnswersButton {
	margin-top: 0;
	font-size: 20px;
	border-radius: 10px;
}

.reloadAgain {
	margin-top: 0;
	font-size: 20px;
	border-radius: 10px;
}

#tickets{
	background-image: url('./images/bigEast.jpg');
	background-size: cover;
	background-position: center center;
	height: 12em;
	width: 100%;
	border-radius: 150px;
}

#jersey {
	background-image: url('./images/novaJersey.jpeg');
	background-size: cover;
	background-position: center center;
	height: 18em;
	width: 90%;
	margin: auto;
	margin-top: 5em;
	border-radius: 150px;
	margin: 1em;
}

#footerPic {
	background-image: url('./images/novaBall.jpg');
	background-size: cover;
	background-position: center;
	height: 50px;
	width: 50px;
	margin: auto;
	border-radius: 100px;
	margin-top: 5px;
	margin-bottom: 5px;
}

#sponsored {
	margin-bottom: .7em;
	font-size: 1.5em;
}


@media screen and (max-width: 1024px) {
	#topPic {
		height: 10em;
	}
	.questionDiv {
		height: 40em;
		flex-direction: column;
	}
	.qSpan {
		height: 10em;
		width: 30em;
		margin: auto;
	}
	.image {
		width: 20em;
		height: 16em;
		margin: auto;
	}
	body {
		font-size: 10px;
		height: 50vh;
	}
	main {
		height: 50vh;
	}

	#jersey {
		margin-top: 6em;
	}
	#peterMessage {
		width: 20em;
		margin-top: 6em;
		padding-top: 4em;
	}
	#image9 {
		margin-left: 8em;
	}
	#image1 {
		margin: auto;
	}

	#answerModal {
		height: 40em;
	}
	#answerModalAnswers {
		height: 35em;
		margin-top: 5em;
		font-size: 1.5em;
	}
	.reload {
		margin: auto;
	}
}

@media screen and (max-width: 375px) {
	#topPic {
		height: 6em;
	}
	.questionDiv {
		width: 63%;
		height: 50%
		margin-left:0;

	}
	.qSpan {
		width: 80%;

	}
	.image {

	}
	body {

	}
	main {
		height: 77vh;
		width: 340px;
		font-size: 6px;

	}

	#jersey {

	}
	#peterMessage {
		width: 60%;
		margin-top: -10%;
		margin-left: 20%
	}
	#HOME {
		background-position: right bottom;
	}
	#image9 {

	}
	#image1 {

	}

	#answerModal {

	}
	#answerModalAnswers {

	}
	.reload {
	
	}
	#sponsored {
		font-size: 1em;

	}

